# Student-FaceVault

./: .gitignore  README.md  pyproject.toml
data/: app.db
src/: database.py  gallery_manager.py  main.py  preprocess_images.py
static/: index.html
static/css/: style.css
static/js/: app.js  debug.js  dropdown-debug.js
