[project]
name = "face-gallery-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.115.14",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.159",
]
